--- a/european_league/clean_european_league.ipynb
+++ b/european_league/clean_european_league.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
        "[5 rows x 115 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
        "4  1979-11-08 00:00:00  182.88     154  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +621,7 @@
        "[5 rows x 42 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,34 +643,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will make a column that indicates whether the home team of each match lost the game (0), won the game (1), or tied the game (2)."
+    "We will make a column that indicates whether the home team of each match lost the game (-1), won the game (1), or tied the game (0)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "match_df['home_win'] = (match_df.home_team_goal - match_df.away_team_goal > 0).astype(int)\n",
-    "match_df.loc[match_df['home_team_goal'] == match_df['away_team_goal'], 'home_win'] = 2"
+    "match_df.loc[match_df['home_team_goal'] < match_df['away_team_goal'], 'home_win'] = -1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1    11917\n",
-       "0     7466\n",
-       "2     6596\n",
+       " 1    11917\n",
+       "-1     7466\n",
+       " 0     6596\n",
        "Name: home_win, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +720,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -779,15 +779,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#CAUTION: Takes a long time to run.\n",
     "match_final_df = match.copy()\n",
     "for i in range(1, 12):\n",
-    "    print(match_final_df.columns)\n",
     "    home_column_names = ['home_player_{}_'.format(i) + column for column in columns]\n",
     "    away_column_names = ['away_player_{}_'.format(i) + column for column in columns]\n",
     "    home_player_columns = []\n",
     "    away_player_columns = []\n",
     "    for j in range(len(match)):\n",
-    "        print(j)\n",
     "        home_player_columns.append(get_latest_rating(match.iloc[j][['home_player_{}'.format(i), 'date']]))\n",
     "        away_player_columns.append(get_latest_rating(match.iloc[j][['away_player_{}'.format(i), 'date']]))\n",
     "    #https://stackoverflow.com/questions/30471101/pandas-convert-series-of-dataframes-to-single-dataframe\n",
@@ -808,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +843,7 @@
        "      <td>2008-07-18 00:00:00</td>\n",
        "      <td>10192</td>\n",
        "      <td>9931</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24559</th>\n",
@@ -858,21 +857,21 @@
        "      <td>2008-07-20 00:00:00</td>\n",
        "      <td>10199</td>\n",
        "      <td>9824</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24561</th>\n",
        "      <td>2008-07-20 00:00:00</td>\n",
        "      <td>7955</td>\n",
        "      <td>10243</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24613</th>\n",
        "      <td>2008-07-23 00:00:00</td>\n",
        "      <td>6493</td>\n",
        "      <td>7955</td>\n",
-       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -880,14 +879,14 @@
       ],
       "text/plain": [
        "                      date  home_team_api_id  away_team_api_id  home_win\n",
-       "24558  2008-07-18 00:00:00             10192              9931         0\n",
+       "24558  2008-07-18 00:00:00             10192              9931        -1\n",
        "24559  2008-07-19 00:00:00              9930             10179         1\n",
-       "24560  2008-07-20 00:00:00             10199              9824         0\n",
-       "24561  2008-07-20 00:00:00              7955             10243         0\n",
-       "24613  2008-07-23 00:00:00              6493              7955         0"
+       "24560  2008-07-20 00:00:00             10199              9824        -1\n",
+       "24561  2008-07-20 00:00:00              7955             10243        -1\n",
+       "24613  2008-07-23 00:00:00              6493              7955        -1"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -899,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -973,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -987,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1002,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1034,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1048,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,12 +1063,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "match_final_df.drop(home_columns + away_columns, axis = 1).to_csv(\"../data/cleaned/european_matches.csv\", index = False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
