--- a/models/baseline_model.ipynb
+++ b/models/baseline_model.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,17 +33,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = pd.read_csv('../data/train_merged.csv')\n",
-    "test = pd.read_csv('../data/test_merged.csv')"
+    "train = pd.read_csv('../data/cleaned/train_final.csv')\n",
+    "test = pd.read_csv('../data/cleaned/test_final.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -63,11 +63,16 @@
        "       'previous_points_diff', 'rank_change_diff', 'rank_diff',\n",
        "       'three_year_ago_avg_diff', 'three_year_ago_weighted_diff',\n",
        "       'total_points_diff', 'two_year_ago_avg_diff',\n",
-       "       'two_year_ago_weighted_diff', 'gdp_diff'],\n",
+       "       'two_year_ago_weighted_diff', 'gdp_diff', 'wins_past_1_games_diff',\n",
+       "       'wins_home_against_away_1_games', 'wins_past_2_games_diff',\n",
+       "       'wins_home_against_away_2_games', 'wins_past_3_games_diff',\n",
+       "       'wins_home_against_away_3_games', 'wins_past_4_games_diff',\n",
+       "       'wins_home_against_away_4_games', 'wins_past_5_games_diff',\n",
+       "       'wins_home_against_away_5_games'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +99,7 @@
        "0.43806009488666314"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +126,7 @@
        "0.421875"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,11 +156,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.random.seed(2018)\n",
+    "np.random.seed(3)\n",
     "X_train, X_validation = train_test_split(train, test_size = 0.2)\n",
     "y_train = X_train['home_win'].ravel()\n",
     "X_train = X_train.drop(['home_win'], axis = 1)\n",
@@ -173,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,15 +187,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic Regression Train Score: 0.5128543177323666\n",
-      "Logistic Regression Validation Score: 0.5421052631578948\n"
+      "Logistic Regression Train Score: 0.5260382333553065\n",
+      "Logistic Regression Validation Score: 0.4921052631578947\n"
      ]
     }
    ],
@@ -208,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +289,7 @@
        " 1        936.866455    49.295727     43.509512      42.634416     37.105145"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,15 +316,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LDA Train Score: 0.5121951219512195\n",
-      "LDA Validation Score: 0.5394736842105263\n"
+      "LDA Train Score: 0.5227422544495716\n",
+      "LDA Validation Score: 0.5026315789473684\n"
      ]
     }
    ],
@@ -337,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,15 +351,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "QDA Train Score: 0.5194462755438365\n",
-      "QDA Validation Score: 0.5342105263157895\n"
+      "QDA Train Score: 0.5280158206987475\n",
+      "QDA Validation Score: 0.48947368421052634\n"
      ]
     }
    ],
@@ -372,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,15 +386,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random Forest Train Score: 0.5491100856954515\n",
-      "Random Forest Validation Score 0.5368421052631579\n"
+      "Random Forest Train Score: 0.5695451549110085\n",
+      "Random Forest Validation Score 0.49473684210526314\n"
      ]
     }
    ],
@@ -407,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -425,14 +430,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LDA Test Score: 0.609375\n"
+      "LDA Test Score: 0.59375\n"
      ]
     }
    ],
@@ -443,14 +448,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "QDA Test Score: 0.640625\n"
+      "QDA Test Score: 0.59375\n"
      ]
     }
    ],
@@ -461,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
