--- a/sofifa/feature_engineering_and_eda.ipynb
+++ b/sofifa/feature_engineering_and_eda.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -70,15 +70,15 @@
        "      <th>bup_passing_diff</th>\n",
        "      <th>bup_speed_diff</th>\n",
        "      <th>...</th>\n",
-       "      <th>last_year_avg_diff</th>\n",
-       "      <th>previous_points_diff</th>\n",
-       "      <th>rank_change_diff</th>\n",
+       "      <th>midfield_diff</th>\n",
+       "      <th>overall_diff</th>\n",
+       "      <th>prestige_diff</th>\n",
+       "      <th>start_age_diff</th>\n",
+       "      <th>value_euros_millions_diff</th>\n",
+       "      <th>wage_euros_thousands_diff</th>\n",
+       "      <th>attack_home_defence_away_diff</th>\n",
+       "      <th>attack_away_defence_home_diff</th>\n",
        "      <th>rank_diff</th>\n",
-       "      <th>three_year_ago_avg_diff</th>\n",
-       "      <th>three_year_ago_weighted_diff</th>\n",
-       "      <th>total_points_diff</th>\n",
-       "      <th>two_year_ago_avg_diff</th>\n",
-       "      <th>two_year_ago_weighted_diff</th>\n",
        "      <th>gdp_diff</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -96,15 +96,15 @@
        "      <td>-0.0</td>\n",
        "      <td>-0.0</td>\n",
        "      <td>...</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>-2.0</td>\n",
+       "      <td>-0.27</td>\n",
        "      <td>-0.0</td>\n",
-       "      <td>-374.0</td>\n",
        "      <td>-0.0</td>\n",
+       "      <td>-4.0</td>\n",
+       "      <td>3.0</td>\n",
        "      <td>9.0</td>\n",
-       "      <td>-0.0</td>\n",
-       "      <td>-0.0</td>\n",
-       "      <td>-0.0</td>\n",
-       "      <td>-0.0</td>\n",
-       "      <td>-0.0</td>\n",
        "      <td>1.639666</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -120,15 +120,15 @@
        "      <td>-0.0</td>\n",
        "      <td>-0.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>-0.0</td>\n",
-       "      <td>-496.0</td>\n",
+       "      <td>-10.0</td>\n",
+       "      <td>-7.0</td>\n",
        "      <td>-4.0</td>\n",
+       "      <td>1.09</td>\n",
+       "      <td>-0.0</td>\n",
+       "      <td>-0.0</td>\n",
+       "      <td>-7.0</td>\n",
+       "      <td>10.0</td>\n",
        "      <td>26.0</td>\n",
-       "      <td>-0.0</td>\n",
-       "      <td>-0.0</td>\n",
-       "      <td>-0.0</td>\n",
-       "      <td>-0.0</td>\n",
-       "      <td>-0.0</td>\n",
        "      <td>0.966720</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -144,15 +144,15 @@
        "      <td>-0.0</td>\n",
        "      <td>-0.0</td>\n",
        "      <td>...</td>\n",
+       "      <td>-13.0</td>\n",
+       "      <td>-7.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>0.91</td>\n",
        "      <td>-0.0</td>\n",
-       "      <td>-845.0</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>-0.0</td>\n",
+       "      <td>-9.0</td>\n",
+       "      <td>9.0</td>\n",
        "      <td>59.0</td>\n",
-       "      <td>-0.0</td>\n",
-       "      <td>-0.0</td>\n",
-       "      <td>-0.0</td>\n",
-       "      <td>-0.0</td>\n",
-       "      <td>-0.0</td>\n",
        "      <td>1.455813</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -168,15 +168,15 @@
        "      <td>-0.0</td>\n",
        "      <td>-0.0</td>\n",
        "      <td>...</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>-0.27</td>\n",
        "      <td>-0.0</td>\n",
-       "      <td>502.0</td>\n",
-       "      <td>-13.0</td>\n",
+       "      <td>-0.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>-11.0</td>\n",
        "      <td>-42.0</td>\n",
-       "      <td>-0.0</td>\n",
-       "      <td>-0.0</td>\n",
-       "      <td>-0.0</td>\n",
-       "      <td>-0.0</td>\n",
-       "      <td>-0.0</td>\n",
        "      <td>0.683074</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -192,20 +192,20 @@
        "      <td>-0.0</td>\n",
        "      <td>-0.0</td>\n",
        "      <td>...</td>\n",
+       "      <td>-7.0</td>\n",
+       "      <td>-3.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>-0.73</td>\n",
        "      <td>-0.0</td>\n",
-       "      <td>-522.0</td>\n",
-       "      <td>-12.0</td>\n",
+       "      <td>-0.0</td>\n",
+       "      <td>-7.0</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>56.0</td>\n",
-       "      <td>-0.0</td>\n",
-       "      <td>-0.0</td>\n",
-       "      <td>-0.0</td>\n",
-       "      <td>-0.0</td>\n",
-       "      <td>-0.0</td>\n",
        "      <td>0.802591</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 41 columns</p>\n",
+       "<p>5 rows × 30 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -223,38 +223,38 @@
        "3         0         13.0                -0.0              -0.0   \n",
        "4         1         -6.0                -0.0              -0.0   \n",
        "\n",
-       "   bup_speed_diff    ...     last_year_avg_diff  previous_points_diff  \\\n",
-       "0            -0.0    ...                   -0.0                -374.0   \n",
-       "1            -0.0    ...                   -0.0                -496.0   \n",
-       "2            -0.0    ...                   -0.0                -845.0   \n",
-       "3            -0.0    ...                   -0.0                 502.0   \n",
-       "4            -0.0    ...                   -0.0                -522.0   \n",
+       "   bup_speed_diff    ...     midfield_diff  overall_diff  prestige_diff  \\\n",
+       "0            -0.0    ...              -3.0          -3.0           -2.0   \n",
+       "1            -0.0    ...             -10.0          -7.0           -4.0   \n",
+       "2            -0.0    ...             -13.0          -7.0           -9.0   \n",
+       "3            -0.0    ...              10.0           9.0            8.0   \n",
+       "4            -0.0    ...              -7.0          -3.0           -1.0   \n",
        "\n",
-       "   rank_change_diff  rank_diff  three_year_ago_avg_diff  \\\n",
-       "0              -0.0        9.0                     -0.0   \n",
-       "1              -4.0       26.0                     -0.0   \n",
-       "2               3.0       59.0                     -0.0   \n",
-       "3             -13.0      -42.0                     -0.0   \n",
-       "4             -12.0       56.0                     -0.0   \n",
+       "   start_age_diff  value_euros_millions_diff  wage_euros_thousands_diff  \\\n",
+       "0           -0.27                       -0.0                       -0.0   \n",
+       "1            1.09                       -0.0                       -0.0   \n",
+       "2            0.91                       -0.0                       -0.0   \n",
+       "3           -0.27                       -0.0                       -0.0   \n",
+       "4           -0.73                       -0.0                       -0.0   \n",
        "\n",
-       "   three_year_ago_weighted_diff  total_points_diff  two_year_ago_avg_diff  \\\n",
-       "0                          -0.0               -0.0                   -0.0   \n",
-       "1                          -0.0               -0.0                   -0.0   \n",
-       "2                          -0.0               -0.0                   -0.0   \n",
-       "3                          -0.0               -0.0                   -0.0   \n",
-       "4                          -0.0               -0.0                   -0.0   \n",
+       "   attack_home_defence_away_diff  attack_away_defence_home_diff  rank_diff  \\\n",
+       "0                           -4.0                            3.0        9.0   \n",
+       "1                           -7.0                           10.0       26.0   \n",
+       "2                           -9.0                            9.0       59.0   \n",
+       "3                           12.0                          -11.0      -42.0   \n",
+       "4                           -7.0                            4.0       56.0   \n",
        "\n",
-       "   two_year_ago_weighted_diff  gdp_diff  \n",
-       "0                        -0.0  1.639666  \n",
-       "1                        -0.0  0.966720  \n",
-       "2                        -0.0  1.455813  \n",
-       "3                        -0.0  0.683074  \n",
-       "4                        -0.0  0.802591  \n",
+       "   gdp_diff  \n",
+       "0  1.639666  \n",
+       "1  0.966720  \n",
+       "2  1.455813  \n",
+       "3  0.683074  \n",
+       "4  0.802591  \n",
        "\n",
-       "[5 rows x 41 columns]"
+       "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -307,33 +307,33 @@
        "      <th>bup_passing_diff</th>\n",
        "      <th>bup_speed_diff</th>\n",
        "      <th>...</th>\n",
-       "      <th>last_year_avg_diff</th>\n",
-       "      <th>previous_points_diff</th>\n",
-       "      <th>rank_change_diff</th>\n",
+       "      <th>midfield_diff</th>\n",
+       "      <th>overall_diff</th>\n",
+       "      <th>prestige_diff</th>\n",
+       "      <th>start_age_diff</th>\n",
+       "      <th>value_euros_millions_diff</th>\n",
+       "      <th>wage_euros_thousands_diff</th>\n",
+       "      <th>attack_home_defence_away_diff</th>\n",
+       "      <th>attack_away_defence_home_diff</th>\n",
        "      <th>rank_diff</th>\n",
-       "      <th>three_year_ago_avg_diff</th>\n",
-       "      <th>three_year_ago_weighted_diff</th>\n",
-       "      <th>total_points_diff</th>\n",
-       "      <th>two_year_ago_avg_diff</th>\n",
-       "      <th>two_year_ago_weighted_diff</th>\n",
        "      <th>gdp_diff</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>0 rows × 41 columns</p>\n",
+       "<p>0 rows × 30 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "Empty DataFrame\n",
-       "Columns: [game_date, home_team, away_team, country, neutral, home_win, attack_diff, bup_dribbling_diff, bup_passing_diff, bup_speed_diff, cc_crossing_diff, cc_passing_diff, cc_shooting_diff, d_aggresion_diff, d_pressure_diff, d_width_diff, defence_diff, full_age_diff, goalkeeeper_overall_diff, growth_diff, midfield_diff, overall_diff, prestige_diff, start_age_diff, value_euros_millions_diff, wage_euros_thousands_diff, attack_home_defence_away_diff, attack_away_defence_home_diff, cur_year_avg_weighted_diff, cur_year_avg_diff, last_year_avg_weighted_diff, last_year_avg_diff, previous_points_diff, rank_change_diff, rank_diff, three_year_ago_avg_diff, three_year_ago_weighted_diff, total_points_diff, two_year_ago_avg_diff, two_year_ago_weighted_diff, gdp_diff]\n",
+       "Columns: [game_date, home_team, away_team, country, neutral, home_win, attack_diff, bup_dribbling_diff, bup_passing_diff, bup_speed_diff, cc_crossing_diff, cc_passing_diff, cc_shooting_diff, d_aggresion_diff, d_pressure_diff, d_width_diff, defence_diff, full_age_diff, goalkeeeper_overall_diff, growth_diff, midfield_diff, overall_diff, prestige_diff, start_age_diff, value_euros_millions_diff, wage_euros_thousands_diff, attack_home_defence_away_diff, attack_away_defence_home_diff, rank_diff, gdp_diff]\n",
        "Index: []\n",
        "\n",
-       "[0 rows x 41 columns]"
+       "[0 rows x 30 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
        "Name: game_date, dtype: float64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
        "Name: game_date, dtype: float64"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
        " 'wins_home_against_away_5_games']"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +764,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 51 columns</p>\n",
+       "<p>5 rows × 40 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -824,10 +824,10 @@
        "1895                               0  \n",
        "1896                               0  \n",
        "\n",
-       "[5 rows x 51 columns]"
+       "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +966,7 @@
        " 'wins_home_against_away_5_games']"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -1159,7 +1159,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 52 columns</p>\n",
+       "<p>5 rows × 41 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1219,10 +1219,10 @@
        "62                               0  \n",
        "63                               0  \n",
        "\n",
-       "[5 rows x 52 columns]"
+       "[5 rows x 41 columns]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1235,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
