--- a/scrap/sofifa-full-scraping.ipynb
+++ b/scrap/sofifa-full-scraping.ipynb
@@ -326,9 +326,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:ac209a]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-ac209a-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
