--- a/scrap/sofifa-cleaning.ipynb
+++ b/scrap/sofifa-cleaning.ipynb
@@ -1470,9 +1470,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:gen2]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-gen2-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
