--- a/EDA-PCA.ipynb
+++ b/EDA-PCA.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -252,7 +254,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X = train.iloc[:,6:]\n",
@@ -266,7 +270,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# pca decomposition\n",
@@ -281,7 +287,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# https://stackoverflow.com/questions/22348229/matplotlib-legend-for-an-arrow\n",
@@ -298,7 +306,9 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import plotly\n",
@@ -652,7 +662,9 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "teams = ['Russia', 'Saudi Arabia', 'Egypt', 'Uruguay', 'Morocco', 'Iran',\n",
@@ -670,7 +682,9 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# check that we have 32 teams\n",
@@ -680,7 +694,9 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# scale data\n",
@@ -943,7 +959,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
