Updated sofifa notebooks

--- a/EDA-notebook.ipynb
+++ b/EDA-notebook.ipynb
@@ -1601,15 +1601,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/anaconda3/lib/python3.7/site-packages/sklearn/ensemble/weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
-      "  from numpy.core.umath_tests import inner1d\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'xgboost'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-d163e133991f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdecomposition\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mPCA\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpreprocessing\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mStandardScaler\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mxgboost\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mXGBClassifier\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmetrics\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0maccuracy_score\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlinear_model\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mLogisticRegressionCV\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'xgboost'"
      ]
     }
    ],
@@ -1620,9 +1623,6 @@
     "import seaborn as sns\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from IPython.core.display import HTML\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
     "from xgboost import XGBClassifier\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.linear_model import LogisticRegressionCV\n",
@@ -2209,15 +2209,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from matplotlib.legend_handler import HandlerPatch\n",
-    "import matplotlib.patches as mpatches\n",
-    "from matplotlib.pyplot import cm\n",
-    "import plotly"
+    "from matplotlib.pyplot import cm"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -2241,17 +2245,7 @@
     "scores = pca.transform(X_scaled)\n",
     "\n",
     "# correlation between PCs and data\n",
-    "pc_cors = np.corrcoef(X_scaled, scores, rowvar=False)[:dim, dim:] # only want cor(x, y)\n",
-    "\n",
-    "# https://stackoverflow.com/questions/22348229/matplotlib-legend-for-an-arrow\n",
-    "\n",
-    "def make_legend_arrow(legend, orig_handle,\n",
-    "                      xdescent, ydescent,\n",
-    "                      width, height, fontsize):\n",
-    "    p = mpatches.FancyArrow(0, 0.5*height, width, 0, length_includes_head=True, head_width=0.75*height )\n",
-    "    return p\n",
-    "\n",
-    "plotly.tools.set_credentials_file(username='ongshengsiong', api_key='fC66C9lv4st6AKGfBWYV')"
+    "pc_cors = np.corrcoef(X_scaled, scores, rowvar=False)[:dim, dim:] # only want cor(x, y)\n"
    ]
   },
   {
@@ -2275,7 +2269,6 @@
    "source": [
     "# # https://stackoverflow.com/questions/37815987/plot-a-correlation-circle-in-python\n",
     "# https://stackoverflow.com/questions/4971269/how-to-pick-a-new-color-for-each-plotted-line-within-a-figure-in-matplotlib\n",
-    "\n",
     "\n",
     "\n",
     "# get top 20 \n",
@@ -2629,9 +2622,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:ac209a]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-ac209a-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2643,7 +2636,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
