some small updates

--- a/doc/milestone3-report.ipynb
+++ b/doc/milestone3-report.ipynb
@@ -34,7 +34,7 @@
     "**Country statistics**: Looking at the past World Cup champions, we noticed that the stronger teams tend to be the more economically wealthy ones in their own confederations. Therefore, we scraped from Wikipedia information about countries like [GDP PPP](https://en.wikipedia.org/wiki/List_of_countries_by_GDP_(PPP)) and [population](https://en.wikipedia.org/wiki/List_of_countries_by_population_(United_Nations) ).\n",
     "\n",
     "\n",
-    "Detailed description of each collected feature can be found in the following notebook [here]()\n",
+    "**Detailed description of each collected feature** can be found in the following notebook [here](https://github.com/AC209aWC2018/World-Cup-2018/blob/master/doc/Feature%20Descriptions.ipynb)\n",
     "\n",
     "#### Data Cleaning\n",
     "\n",
