--- a/sofifa/GDP_features.ipynb
+++ b/sofifa/GDP_features.ipynb
@@ -1554,12 +1554,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train.to_csv('../data/train_merged.csv', index = False)\n",
-    "test.to_csv('../data/test_merged.csv', index = False)"
+    "train.to_csv('../data/train_gdp.csv', index = False)\n",
+    "test.to_csv('../data/test_gdp.csv', index = False)"
    ]
   }
  ],
@@ -1579,7 +1579,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
